update index file

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blog</a>
+            <a class="nav-link" href="blog.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -72,8 +72,8 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>Greetings!</p>
-        <p>My name is khansa, I've just finished my master degree in computer science, I love programming especially web development.
-        I hate routine, routine is boring, I always try to put something new in my daily tasks, new things make me more motivated, I adore exploring new things that sometimes can be source of inspiration and creativity. </p>
+        <p>My name is khansa, I hate routine, routine is boring, I always try to put something new in my daily tasks, new things make me more motivated, I adore exploring new things that sometimes can be source of inspiration and creativity.
+I'm a passionate Software Engineer with a deep love for cloud computing. As an Azure Fundamentals certified professional, I'm dedicated to exploring the endless possibilities of cloud technologies. With previous experience in developing software applications and websites, I have honed my skills in crafting innovative solutions. My journey includes internships working with OpenStack, where I developed cloud migration strategies and contributed to open-source projects. I'm excited to continue leveraging the power of the cloud to make a meaningful impact. Let's shape the future of cloud computing together! </p>
         <p></p>
       </div>
     </div>
@@ -112,7 +112,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; KHANSA AMROUNI 2020</p>
+          <p class="copyright text-muted">Copyright &copy; KHANSA AMROUNI 2023</p>
         </div>
       </div>
     </div>
