--- a/index.html
+++ b/index.html
@@ -72,8 +72,13 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>Greetings!</p>
-        <p>My name is khansa, I hate routine, routine is boring, I always try to put something new in my daily tasks, new things make me more motivated, I adore exploring new things that sometimes can be source of inspiration and creativity.
-I'm a passionate Software Engineer with a deep love for cloud computing. As an Azure Fundamentals certified professional, I'm dedicated to exploring the endless possibilities of cloud technologies. With previous experience in developing software applications and websites, I have honed my skills in crafting innovative solutions. My journey includes internships working with OpenStack, where I developed cloud migration strategies and contributed to open-source projects. I'm excited to continue leveraging the power of the cloud to make a meaningful impact. Let's shape the future of cloud computing together! </p>
+        <p>My name is khansa, I'm a passionate Software Engineer with a deep love for cloud computing. 
+         As an Azure Fundamentals certified professional, I'm dedicated to exploring the endless possibilities of cloud technologies.
+         With previous experience in developing software applications and websites, 
+         I have honed my skills in crafting innovative solutions. My journey includes internships working with OpenStack, 
+         where I developed cloud migration strategies and contributed to open-source projects. 
+         I'm excited to continue leveraging the power of the cloud to make a meaningful impact.
+         </br>  Let's shape the future of cloud computing together! \o/ </p>
         <p></p>
       </div>
     </div>
