update portfolio page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -72,12 +72,11 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>Greetings!</p>
-        <p>My name is khansa, I'm a passionate Software Engineer with a deep love for cloud computing. 
-         As an Azure Fundamentals certified professional, I'm dedicated to exploring the endless possibilities of cloud technologies.
-         With previous experience in developing software applications and websites, 
+        <p>My name is khansa, I'm a passionate Software Engineer with a deep love for cloud computing.<p>
+        <p>As an Azure Fundamentals certified professional with previous experience in developing software applications and websites, 
          I have honed my skills in crafting innovative solutions. My journey includes internships working with OpenStack, 
-         where I developed cloud migration strategies and contributed to open-source projects. 
-         I'm excited to continue leveraging the power of the cloud to make a meaningful impact.
+         where I developed cloud migration strategies and contributed to open-source projects.</p>
+        <p>I'm excited to continue leveraging the power of the cloud to make a meaningful impact.
          </br>  Let's shape the future of cloud computing together! \o/ </p>
         <p></p>
       </div>
