fix landing page

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>khansa AMROUNI</title>
+  <title>Trang Trại Xanh</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +19,6 @@
 
   <!-- Custom styles for this template -->
   <link href="css/clean-blog.min.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -28,39 +26,31 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Khansa Amrouni</a>
+      <a class="navbar-brand" href="index.html">Trang Trại Xanh</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Trang chủ</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Giới thiệu</a></li>
+          <li class="nav-item"><a class="nav-link" href="products.html">Sản phẩm</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Liên hệ</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/farm-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>About Me</h1>
-            <span class="subheading">Software Engineer.</span>
+            <h1>Giới thiệu</h1>
+            <span class="subheading">Trang trại nông nghiệp sạch & bền vững</span>
           </div>
         </div>
       </div>
@@ -71,14 +61,17 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Greetings!</p>
-        <p>My name is khansa, I'm a passionate Software Engineer with a deep love for cloud computing.<p>
-        <p>As an Azure Fundamentals certified professional with previous experience in developing software applications and websites, 
-         I have honed my skills in crafting innovative solutions. My journey includes internships working with OpenStack, 
-         where I developed cloud migration strategies and contributed to open-source projects.</p>
-        <p>I'm excited to continue leveraging the power of the cloud to make a meaningful impact.
-         </br>  Let's shape the future of cloud computing together! \o/ </p>
-        <p></p>
+        <p>Chào mừng bạn đến với Trang Trại Xanh!</p>
+        <p>Chúng tôi là một nhóm những người trẻ đầy đam mê, mong muốn mang đến thực phẩm sạch, an toàn và chất lượng cao đến mọi gia đình Việt Nam.</p>
+        <p>Trang trại tọa lạc tại vùng quê trong lành, nơi chúng tôi trồng trọt và chăn nuôi theo phương pháp hữu cơ, không sử dụng hóa chất độc hại. Chúng tôi tin rằng sức khỏe bắt đầu từ nguồn thực phẩm bạn dùng mỗi ngày.</p>
+        <p>Bạn có thể tìm thấy tại đây các sản phẩm tươi ngon như rau củ sạch, trứng gà thả vườn, và nhiều sản phẩm khác. Chúng tôi luôn sẵn sàng đồng hành cùng bạn trên hành trình sống xanh, sống khỏe.</p>
+        <p>Cùng nhau vun đắp một tương lai nông nghiệp sạch và phát triển bền vững!</p>
+        <br>
+        <strong>Thành viên nhóm:</strong><br>
+        <ul>
+          <li>Nguyễn Phúc Hưng</li>
+          <li>Hoàng Khánh Duy</li>
+        </ul>
       </div>
     </div>
   </div>
@@ -92,31 +85,23 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="https://twitter.com/khansa00080510">
+              <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://stackoverflow.com/users/4737612/khansa-amrouni">
+              <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-stack-overflow fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/khansaAmrouni">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; KHANSA AMROUNI 2023</p>
+          <p class="copyright text-muted">© Trang Trại Xanh 2025</p>
         </div>
       </div>
     </div>
